Update project information

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Tobias Doerffel <tobydox/at/users/dot/sf/dot/net>
+Tobias Junghans <tobydox/at/users/dot/sf/dot/net>
 Maintainer and developer
 
 Andrei Krueger	<anc/at/iki/dot/fi>
